--- a/src/components/navbar/Navbar.css
+++ b/src/components/navbar/Navbar.css
@@ -5,13 +5,14 @@
     align-items: center;
     justify-content:space-between;
     margin:auto;
-    background-color: palegoldenrod;
+    /* background-color:  pink; */
+    background-image: linear-gradient(180deg,pink,#ADD8E6);
   }
 
   .title {
     margin-left: 20px;
-    font-size: 35px;
-
+    font-size: 50px;
+ 
   }
   
   .links {
